hphp/hack/test/typecheck/dynamic/dynamic_keyword.php
<?hh // strict

newtype dynamic = int;
